<resources>
    <string name="app_name">Epsilon_App</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Innstillinger</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_header">Epsilon</string>
    <string name="prompt_phoneNumber">Phone Number</string>
    <string name="faq">Ofte stilte spørsmål</string>
    <string name="title_activity_login">Logg Inn</string>
    <string name="facebookLinkText">Du kan også finne oss på facebook</string>
    <string name="news">Nyheter</string>
    <string name="calendar">Kalender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ask_question">Still et spørsmål</string>
    <string name="about_us">Om oss</string>
    <string name="news_feed">Nyheter</string>
    <string name="newstitle">Tittel</string>
    <string name="newscontent">Content</string>
    <string name="enter_title_here">Skriv tittel her</string>
    <string name="enter_news_here">Skriv nyheten her</string>
    <string name="postNews">Send</string>
    <string name="Epsilon">Epsilon</string>
    <string name="Edit">Rediger</string>
    <string name="Close">Lukk</string>
    <string name="Send">Send</string>
    <string name="editFaq">Rediger et ofte stilt spørsmål</string>
    <string name="epsilon_linjeforening">Epsilon Linjeforening</string>
    <string name="addFaq">Legg til et ofte stilt spørsmål</string>
    <string name="loginBtnText">Logg inn</string>
    <string name="calendarBtn">Legg til i kalender</string>
    <string name="startTime">Start-tid</string>
    <string name="endTime">Slutt-tid</string>
    <string name="prompt_firstName">Fornavn</string>
    <string name="prompt_LastName">Etternavn</string>
    <string name="prompt_email">Email</string>
    <string name="register">Registrer en ny bruker</string>
    <string name="prompt_password">Passord</string>
    <string name="RegisterNewUser">Registrer en ny bruker</string>
    <string name="welcome">"Velkommen"</string>
    <string name="action_logout">Logg ut</string>
    <string name="twoFactorKey">Skriv koden her</string>
    <string name="changePassword">Endre passordet ditt</string>
    <string name="oldPassword">Gammelt passord</string>
    <string name="newPassword">Nytt passord</string>
    <string name="confirm">Bekreft</string>
    <string name="ask_epsilon_a_question">Still Epsilon et spørsmål</string>
    <string name="about_epsilon_text">Epsilon Ålesund er en linjeforening for studenter på NTNU Ålesund. Foreningen har fokus på å øke samholdet mellom fagene Data, Automasjon og Elkraft.</string>
    <string name="settings">Innstillinger</string>
    <string name="showMoreText">(Trykk for å utvide)</string>
    <string name="forgotPassword">Glemt passord</string>
    <string name="link_to_facebook">Link to facebook</string>
    <string name="om_epsilon">Om Epsilon</string>
    <string name="sporsmal">Spørsmål</string>
    <string name="svar">Svar</string>
    <string name="tidspunkt">Tidspunkt:</string>
    <string name="adresse">Adresse:</string>
    <string name="tittel">Tittel</string>
    <string name="beskrivelse">Beskrivelse</string>
    <string name="legg_til_event">Legg til event</string>
    <string name="added">Lagt til</string>
    <string name="error_cant_add">Error: kunne ikke legge til</string>
    <string name="please_provide_valid_first_name">Vennligst oppgi et gyldig fornavn</string>
    <string name="please_provide_valid_last_name">Vennligst oppgi et gyldig etternavn</string>
    <string name="please_provide_valid_email">Vennligst oppgi en gyldig email</string>
    <string name="password_must_be_longer_than_5_characters">Passordet må være lengre enn 5 karakterer</string>
    <string name="something_went_wrong_with_password_changing">Noe gikk galt da vi prøvde å endre passordet</string>
    <string name="old_password_is_wrong">Det gamle passordet er feil</string>
    <string name="password_is_changed">Passordet er endret</string>
    <string name="password_must_be_equal">Passordene må være identiske</string>
    <string name="error_cant_edit">Error: kunne ikke endre</string>
</resources>