<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="no.ntnu.epsilon_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="no.ntnu.epsilon_app.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="no.ntnu.epsilon_app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_faq"
        android:name="no.ntnu.epsilon_app.ui.faq.FaqFragment"
        android:label="@string/faq"
        tools:layout="@layout/fragment_faq_item_list" />
    <fragment
        android:id="@+id/nav_ask_question"
        android:name="no.ntnu.epsilon_app.ui.ask_question.ask_question_fragment"
        android:label="@string/ask_question"
        tools:layout="@layout/fragment_faq_item_list" />
    <fragment
        android:id="@+id/nav_about_us"
        android:name="no.ntnu.epsilon_app.ui.about_us.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about_us_list" />
    <fragment
        android:id="@+id/nav_news"
        android:name="no.ntnu.epsilon_app.ui.news.NewsFeedFragment"
        android:label="@string/news"
        tools:layout="@layout/news_feed_fragment" />
    <fragment
        android:id="@+id/nav_calendar"
        android:name="no.ntnu.epsilon_app.ui.calendar.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar"/>
</navigation>