<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_newsfeed"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/news_feed" />

        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/calendar"/>

        <item
            android:id="@+id/nav_ask_question"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ask_question" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/about_us" />

    </group>
</menu>