<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/twoFactorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/epsilon_logo"
            android:layout_width="408dp"
            android:layout_height="104dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="0dp"
            app:srcCompat="@drawable/ic_epsilon_logo"
            android:contentDescription="@string/Epsilon" />


        <TextView
            android:id="@+id/twoFactorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/twoFactorKey"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/twoFactorEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border"
            android:ems="14"
            android:hint="@string/twoFactorKey"
            android:textColor="@color/colorAccent"
            android:textColorHint="#73FFFFFF"
            android:autofillHints="Two factor code"
            android:inputType="phone" />


        <Button
            android:id="@+id/twoFactorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            android:background="@drawable/login_border"
            android:ems="14"
            android:fitsSystemWindows="true"
            android:text="@string/Send"
            android:textColor="@color/colorAccent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            android:fitsSystemWindows="true" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal" />
    </LinearLayout>

</ScrollView>

