<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="352dp"
            android:layout_height="433dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="150dp"
            android:background="@drawable/ask_question_border"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="46dp"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/ask_epsilon_a_question"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="26dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextQuestionInput"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/border"
                android:ems="14"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/ask_question"
                android:inputType="textMultiLine"
                android:textColor="@color/colorAccent"
                android:textColorHint="#73FFFFFF"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="475dp" />

            <Button
                android:id="@+id/SubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@drawable/login_border"
                android:ems="14"

                android:fitsSystemWindows="true"
                android:text="@string/Send"
                android:textColor="@color/colorAccent" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

